ism_tests/tests/derive/fail/invalid_type.rs
// Note: Generated by AI assistant
use ism_derive::{Serialize, Deserialize};

#[derive(Serialize, Deserialize)]
struct InvalidType {
    num: i32,  // Should fail - numbers not supported
    flag: bool,  // Should fail - booleans not supported
}

fn main() {} 